tests/ui/attributes/export/mangling-version-2.stderr
error[E0463]: can't find crate for `libr`
  --> $DIR/mangling-version-2.rs:2:1
   |
LL | extern dyn crate libr;
   | ^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: `extern dyn` annotation is only allowed with `v0` mangling scheme
  --> $DIR/mangling-version-2.rs:2:1
   |
LL | extern dyn crate libr;
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0463`.
